Preparando para deploy

--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   },
   "homepage": "https://davidticona.com/demos/javascript-menu-editor",
   "devDependencies": {
+    "@types/node": "^20.2.1",
     "@types/sortablejs": "^1.15.1",
     "sass": "^1.62.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-dts": "^2.3.0"
   },
   "dependencies": {
     "sortablejs": "^1.15.0"
